--- a/src/components/content/Icon/Icon.module.scss
+++ b/src/components/content/Icon/Icon.module.scss
@@ -1,4 +1,5 @@
 @use '../../../styles/variables/color';
+@use '../../../styles/variables/font';
 
 .icon {
   display: inline-block;
@@ -9,8 +10,6 @@
   svg {
     display: block;
     height: 1em;
-    position: relative;
-    top: -10%;
     width: 1em;
   }
 
@@ -20,5 +19,11 @@
 
   &--accent {
     color: color.$yellow;
+  }
+
+  @each $key, $size in font.$sizes {
+    &--#{$key} {
+      font-size: $size;
+    }
   }
 }
