--- a/src/components/content/Icon/Icon.module.scss
+++ b/src/components/content/Icon/Icon.module.scss
@@ -17,6 +17,12 @@
     fill: currentColor;
   }
 
+  @each $key, $color in color.$colors {
+    &--#{$key} {
+      color: $color;
+    }
+  }
+
   &--accent {
     color: color.$yellow;
   }
