--- a/src/styles/variables/skin.scss
+++ b/src/styles/variables/skin.scss
@@ -4,3 +4,5 @@ $color: var(--skin-color);
 $heading-color: var(--skin-heading-color);
 $link-color: var(--skin-link-color);
 $border-color: var(--skin-border-color);
+$link-text-decoration: var(--skin-link-text-decoration);
+$link-text-decoration-hover: var(--skin-link-text-decoration-hover);
