--- a/src/components/controls/Select/Select.module.scss
+++ b/src/components/controls/Select/Select.module.scss
@@ -23,11 +23,11 @@
 
   &__affix {
     align-items: center;
-    background: input.$background;
-    border-left: 1px solid input.$border;
+    background: var(--input-background);
+    border-left: 1px solid var(--input-border);
     border-radius: 0 input.$border-radius input.$border-radius 0;
     bottom: 0;
-    color: color.$link;
+    color: var(--skin-link-color);
     display: flex;
     font-size: font.$size-xl;
     justify-content: center;
