--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @use 'variables/font';
 @use 'variables/transition';
 
+@import 'base/buttons';
 @import 'base/skins';
 @import 'base/scaffolding';
 @import 'base/typography';
