--- a/src/styles/mixins/forms.scss
+++ b/src/styles/mixins/forms.scss
@@ -5,10 +5,10 @@
 @use '../variables/transition';
 
 @mixin input() {
-  background: input.$background;
-  border: 1px solid input.$border;
+  background: var(--input-background);
+  border: 1px solid var(--input-border);
   border-radius: input.$border-radius;
-  color: input.$color;
+  color: var(--input-color);
   display: flex;
   line-height: 1.75;
   position: relative;
@@ -17,11 +17,11 @@
 
   &:hover,
   &:focus-within {
-    border-color: input.$border-hover;
+    border-color: var(--input-border-hover);
   }
 
   &:focus-within {
-    background: color.$white;
+    background: var(--input-background-focus);
   }
 
   &--valid {
