fix: skin display

--- a/src/styles/mixins/skin.scss
+++ b/src/styles/mixins/skin.scss
@@ -12,7 +12,7 @@
 @mixin create-skins($skins) {
   .skin {
     // Don't affect grid/flex layout
-    display: contets;
+    display: contents;
 
     @each $skin in $skins {
       &--#{$skin} {
