--- a/src/components/content/Text/Text.module.scss
+++ b/src/components/content/Text/Text.module.scss
@@ -58,4 +58,18 @@
       }
     }
   }
+
+  &--transform {
+    &-capitalize {
+      text-transform: capitalize;
+    }
+
+    &-uppercase {
+      text-transform: uppercase;
+    }
+
+    &-lowercase {
+      text-transform: lowercase;
+    }
+  }
 }
