--- a/src/styles/variables/color.scss
+++ b/src/styles/variables/color.scss
@@ -23,6 +23,11 @@ $magenta: #d12767;
 
 $red: #eb5757;
 
+// TBOR
+$harp: #ebf5f1;
+$duck-egg: #89c1ab;
+$citrus: #c7d56b;
+
 $body: $blue-dark;
 $background: $grey-light;
 $accent: $yellow;
@@ -48,6 +53,9 @@ $colors: (
   'maroon': $maroon,
   'magenta': $magenta,
   'red': $red,
+  'harp': $harp,
+  'duck-egg': $duck-egg,
+  'citrus': $citrus,
   'body': $body,
   'background': $background,
   'accent': $accent,
