feat: bump h1 up again

--- a/src/styles/themes/business-of-recycling/main.scss
+++ b/src/styles/themes/business-of-recycling/main.scss
@@ -29,10 +29,10 @@ $skins: light, medium, dark, accent, neutral, positive, negative, attention;
   --skin-heading-color-accent: #{color.$blue-darkest};
   --skin-link-color-accent: #{color.$blue-darkest};
 
-  --font-size-h1: 2.5em;
-  --font-size-h2: 2em;
-  --font-size-h3: 1.5em;
-  --font-size-h4: 1.25em;
+  --font-size-h1: 3rem;
+  --font-size-h2: 2rem;
+  --font-size-h3: 1.5rem;
+  --font-size-h4: 1.25rem;
 
   --link-font-weight: 700;
 
