refactor: spacing default is md

--- a/src/components/composition/List/List.module.scss
+++ b/src/components/composition/List/List.module.scss
@@ -13,8 +13,7 @@
       --list-spacing: 0;
     }
 
-    &-xs,
-    &-default {
+    &-xs {
       --list-spacing: #{spacing.$vertical-xs};
     }
 
