--- a/src/styles/mixins/list.scss
+++ b/src/styles/mixins/list.scss
@@ -1,7 +1,7 @@
 @use '../variables/spacing';
 
 @mixin default() {
-  --list-spacing: #{spacing.$vertical-xs};
+  --list-spacing: #{spacing.$vertical-md};
   list-style: none;
   margin: calc(var(--list-spacing) * -1) 0;
   padding: 0;
