--- a/src/components/content/Lead/Lead.module.scss
+++ b/src/components/content/Lead/Lead.module.scss
@@ -1,6 +1,6 @@
 @use '../../../styles/variables/font';
 
 .lead {
-  font-size: font.$size-xl;
+  font-size: var(--font-size-lead, #{font.$size-xl});
   font-weight: font.$weight-base;
 }
