feat: make headin font weight themeable fixes #45

--- a/src/styles/mixins/title.scss
+++ b/src/styles/mixins/title.scss
@@ -4,6 +4,7 @@
 
 @mixin title {
   color: skin.$heading-color;
+  font-weight: var(--heading-font-weight, 700);
   letter-spacing: -0.025em;
   line-height: font.$line-height-sm;
   margin-bottom: spacing.$vertical-xs;
