--- a/src/styles/themes/business-of-recycling/main.scss
+++ b/src/styles/themes/business-of-recycling/main.scss
@@ -37,6 +37,7 @@ $skins: light, medium, dark, accent, neutral, positive, negative, attention;
 
   --font-size-lead: 1.25rem;
 
+  --heading-font-weight: 800;
   --link-font-weight: 700;
 
   --button-border-radius: 1.5rem;
