feat: text button weights

--- a/src/components/controls/TextButton/TextButton.module.scss
+++ b/src/components/controls/TextButton/TextButton.module.scss
@@ -49,4 +49,12 @@
       text-decoration: none;
     }
   }
+
+  &--weight {
+    @each $name, $weight in font.$weights {
+      &-#{$name} {
+        font-weight: $weight;
+      }
+    }
+  }
 }
