feat: icon props

--- a/src/components/content/Icon/Icon.module.scss
+++ b/src/components/content/Icon/Icon.module.scss
@@ -27,6 +27,13 @@
     color: color.$yellow;
   }
 
+  &--baseline {
+    svg {
+      position: relative;
+      top: -10%;
+    }
+  }
+
   @each $key, $size in font.$sizes {
     &--#{$key} {
       font-size: $size;
