--- a/src/components/composition/Modal/Modal.module.scss
+++ b/src/components/composition/Modal/Modal.module.scss
@@ -3,11 +3,19 @@
 @use '../../../styles/variables/font';
 @use '../../../styles/variables/spacing';
 @use '../../../styles/variables/breakpoint';
+@use '../../../styles/variables/transition';
 @use '../../../styles/mixins/screen-reader';
 
 @keyframes fade-in {
   from {
     opacity: 0;
+  }
+}
+
+@keyframes fade-in-scale {
+  from {
+    opacity: 0;
+    transform: scale(0.975);
   }
 }
 
@@ -29,12 +37,12 @@
   }
 
   &__overlay {
-    animation: fade-in 200ms both;
+    animation: fade-in transition.$duration both transition.$timing;
     background-color: sassColor.scale(color.$blue-lightest, $alpha: -65%);
   }
 
   &__dialog {
-    animation: fade-in 500ms 50ms both;
+    animation: fade-in-scale transition.$duration (transition.$duration / 2) both transition.$timing;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: auto;
     max-height: 100vh;
@@ -48,7 +56,7 @@
         width: $bp;
       }
     }
-  
+
     &--auto {
       width: auto;
     }
