--- a/src/components/controls/Checkbox/Checkbox.module.scss
+++ b/src/components/controls/Checkbox/Checkbox.module.scss
@@ -72,6 +72,7 @@
   &--type-input {
     @include forms.input;
     @include forms.input-padding;
+    border-radius: input.$checkradio-border-radius;
   }
 
   &--type-list {
