--- a/src/styles/themes/business-of-recycling/main.scss
+++ b/src/styles/themes/business-of-recycling/main.scss
@@ -60,6 +60,8 @@ $skins: light, medium, dark, accent, neutral, positive, negative, attention;
   --input-border: #{color.$duck-egg};
   --input-border-hover: #{color.$duck-egg};
   --input-color: #{color.$blue-darkest};
+  --input-checked: #{color.$blue-darkest};
+  --input-checkradio-border-radius: var(--button-border-radius);
 
   --card-border-radius: 0.5rem;
 }
