docs: font sizes and breakpoints

--- a/src/components/content/ContainerSvg/ContainerSvg.module.scss
+++ b/src/components/content/ContainerSvg/ContainerSvg.module.scss
@@ -4,9 +4,9 @@
 .container-svg {
   &__lid,
   &__body {
-    @each $colourName, $colour in container.$colours {
-      &.container-svg__lid--colour-#{$colourName},
-      &.container-svg__body--colour-#{$colourName} {
+    @each $colorName, $color in container.$colors {
+      &.container-svg__lid--colour-#{$colorName},
+      &.container-svg__body--colour-#{$colorName} {
         fill: $colour;
       }
     }
