--- a/src/styles/variables/container.scss
+++ b/src/styles/variables/container.scss
@@ -1,6 +1,6 @@
 /* stylelint-disable color-hex-length */
 
-$colours: (
+$colors: (
   'grey': #828282,
   'black': #4f4f4f,
   'greyLight': #bdbdbd,
