fix: more double to single quote fixes

--- a/src/components/canvas/Alert/Alert.module.scss
+++ b/src/components/canvas/Alert/Alert.module.scss
@@ -1,6 +1,6 @@
-@use "../../../styles/variables/color";
-@use "../../../styles/variables/spacing";
-@use "../../../styles/variables/skin";
+@use '../../../styles/variables/color';
+@use '../../../styles/variables/spacing';
+@use '../../../styles/variables/skin';
 
 .alert {
   background: skin.$background;
