--- a/src/components/canvas/Section/Section.module.scss
+++ b/src/components/canvas/Section/Section.module.scss
@@ -1,5 +1,5 @@
-@use "../../../styles/variables/color";
-@use "../../../styles/variables/skin";
+@use '../../../styles/variables/color';
+@use '../../../styles/variables/skin';
 
 .section {
   background: skin.$background;
