--- a/src/components/content/ContainerSvg/ContainerSvg.module.scss
+++ b/src/components/content/ContainerSvg/ContainerSvg.module.scss
@@ -1,5 +1,5 @@
-@use "../../../styles/variables/container";
-@use "../../../styles/variables/color.scss";
+@use '../../../styles/variables/container';
+@use '../../../styles/variables/color.scss';
 
 .container-svg {
   &__lid,
