--- a/src/components/content/HelpText/HelpText.module.scss
+++ b/src/components/content/HelpText/HelpText.module.scss
@@ -1,6 +1,6 @@
-@use "../../../styles/variables/color";
-@use "../../../styles/variables/font";
-@use "../../../styles/variables/spacing";
+@use '../../../styles/variables/color';
+@use '../../../styles/variables/font';
+@use '../../../styles/variables/spacing';
 
 .help-text {
   color: color.$blue-dark;
