--- a/src/components/content/Longform/Longform.module.scss
+++ b/src/components/content/Longform/Longform.module.scss
@@ -1,5 +1,5 @@
-@use "../../../styles/variables/font";
-@use "../../../styles/variables/spacing";
+@use '../../../styles/variables/font';
+@use '../../../styles/variables/spacing';
 
 .longform {
   h1 {
