--- a/src/components/controls/TextButton/TextButton.module.scss
+++ b/src/components/controls/TextButton/TextButton.module.scss
@@ -1,7 +1,7 @@
-@use "../../../styles/variables/color";
-@use "../../../styles/variables/font";
-@use "../../../styles/variables/spacing";
-@use "../../../styles/variables/transition";
+@use '../../../styles/variables/color';
+@use '../../../styles/variables/font';
+@use '../../../styles/variables/spacing';
+@use '../../../styles/variables/transition';
 
 .text-button {
   appearance: none;
