--- a/src/styles/base/_scaffolding.scss
+++ b/src/styles/base/_scaffolding.scss
@@ -1,6 +1,6 @@
-@use "../variables/font";
-@use "../variables/color";
-@use "../variables/skin";
+@use '../variables/font';
+@use '../variables/color';
+@use '../variables/skin';
 
 * {
   box-sizing: border-box;
