--- a/src/styles/mixins/forms.scss
+++ b/src/styles/mixins/forms.scss
@@ -1,9 +1,9 @@
-@use "../variables/color";
-@use "../variables/font";
-@use "../variables/input";
-@use "../variables/skin";
-@use "../variables/spacing";
-@use "../variables/transition";
+@use '../variables/color';
+@use '../variables/font';
+@use '../variables/input';
+@use '../variables/skin';
+@use '../variables/spacing';
+@use '../variables/transition';
 
 @mixin input() {
   background: var(--input-background);
