--- a/src/styles/themes/default/main.scss
+++ b/src/styles/themes/default/main.scss
@@ -1,5 +1,5 @@
-@use "../../variables/color";
-@use "../../mixins/skin";
+@use '../../variables/color';
+@use '../../mixins/skin';
 
 $skins: light, dark, neutral, positive, negative, attention;
 
