--- a/src/styles/variables/color.scss
+++ b/src/styles/variables/color.scss
@@ -41,32 +41,32 @@ $positive: $green;
 $negative: $maroon;
 
 $colors: (
-  "white": $white,
-  "blue-lightest": $blue-lightest,
-  "blue-light": $blue-light,
-  "blue": $blue,
-  "blue-dark": $blue-dark,
-  "blue-darkest": $blue-darkest,
-  "blue-2": $blue-2,
-  "teal": $teal,
-  "grey-light": $grey-light,
-  "yellow": $yellow,
-  "yellow-light": $yellow-light,
-  "orange": $orange,
-  "purple": $purple,
-  "green": $green,
-  "green-light": $green-light,
-  "green-3": $green-3,
-  "maroon": $maroon,
-  "magenta": $magenta,
-  "red": $red,
-  "harp": $harp,
-  "duck-egg": $duck-egg,
-  "citrus": $citrus,
-  "body": $body,
-  "background": $background,
-  "accent": $accent,
-  "link": $link,
-  "positive": $positive,
-  "negative": $negative,
+  'white': $white,
+  'blue-lightest': $blue-lightest,
+  'blue-light': $blue-light,
+  'blue': $blue,
+  'blue-dark': $blue-dark,
+  'blue-darkest': $blue-darkest,
+  'blue-2': $blue-2,
+  'teal': $teal,
+  'grey-light': $grey-light,
+  'yellow': $yellow,
+  'yellow-light': $yellow-light,
+  'orange': $orange,
+  'purple': $purple,
+  'green': $green,
+  'green-light': $green-light,
+  'green-3': $green-3,
+  'maroon': $maroon,
+  'magenta': $magenta,
+  'red': $red,
+  'harp': $harp,
+  'duck-egg': $duck-egg,
+  'citrus': $citrus,
+  'body': $body,
+  'background': $background,
+  'accent': $accent,
+  'link': $link,
+  'positive': $positive,
+  'negative': $negative,
 );
