--- a/src/components/composition/Enter/Enter.module.scss
+++ b/src/components/composition/Enter/Enter.module.scss
@@ -1,4 +1,4 @@
-@use "../../../styles/variables/transition";
+@use '../../../styles/variables/transition';
 $enter-transition-duration: 0.5s;
 $enter-transition-timing: ease-in-out;
 
