--- a/src/components/composition/Modal/Modal.module.scss
+++ b/src/components/composition/Modal/Modal.module.scss
@@ -1,10 +1,10 @@
-@use "sass:color" as sassColor;
-@use "../../../styles/variables/color";
-@use "../../../styles/variables/font";
-@use "../../../styles/variables/spacing";
-@use "../../../styles/variables/breakpoint";
-@use "../../../styles/variables/transition";
-@use "../../../styles/mixins/screen-reader";
+@use 'sass:color' as sassColor;
+@use '../../../styles/variables/color';
+@use '../../../styles/variables/font';
+@use '../../../styles/variables/spacing';
+@use '../../../styles/variables/breakpoint';
+@use '../../../styles/variables/transition';
+@use '../../../styles/mixins/screen-reader';
 
 @keyframes fade-in {
   from {
@@ -23,7 +23,7 @@
   display: flex;
   z-index: 9; // sit in front of most stuff, but not global alerts
 
-  &[aria-hidden="true"] {
+  &[aria-hidden='true'] {
     display: none;
   }
 
