--- a/src/components/content/Icon/Icon.module.scss
+++ b/src/components/content/Icon/Icon.module.scss
@@ -1,5 +1,5 @@
-@use "../../../styles/variables/color";
-@use "../../../styles/variables/font";
+@use '../../../styles/variables/color';
+@use '../../../styles/variables/font';
 
 $icon-size-giant: 3.5em;
 
