--- a/src/components/controls/Checkbox/Checkbox.module.scss
+++ b/src/components/controls/Checkbox/Checkbox.module.scss
@@ -1,9 +1,9 @@
-@use "../../../styles/variables/color";
-@use "../../../styles/variables/spacing";
-@use "../../../styles/variables/transition";
-@use "../../../styles/variables/input";
-@use "../../../styles/mixins/forms";
-@use "../../../styles/mixins/screen-reader";
+@use '../../../styles/variables/color';
+@use '../../../styles/variables/spacing';
+@use '../../../styles/variables/transition';
+@use '../../../styles/variables/input';
+@use '../../../styles/mixins/forms';
+@use '../../../styles/mixins/screen-reader';
 
 .checkbox {
   align-items: center;
