--- a/src/styles/variables/container.scss
+++ b/src/styles/variables/container.scss
@@ -1,24 +1,24 @@
 /* stylelint-disable color-hex-length */
 
 $colors: (
-  "grey": #828282,
-  "black": #4f4f4f,
-  "greyLight": #bdbdbd,
-  "blue": #2d9cdb,
-  "blueDark": #2262b9,
-  "blueLight": #56ccf2,
-  "green": #3cb848,
-  "greenDark": #219653,
-  "greenLight": #6fcf97,
-  "cream": #e1d9c0,
-  "yellow": #f2c94c,
-  "white": #f4f7f9,
-  "red": #f24545,
-  "brown": #ad7849,
-  "orange": #f2994a,
-  "pink": #ff649e,
-  "maroon": #a62f5a,
-  "purple": #9946db,
-  "transparent": #ffffff00,
-  "duckEgg": #89c1ab,
+  'grey': #828282,
+  'black': #4f4f4f,
+  'greyLight': #bdbdbd,
+  'blue': #2d9cdb,
+  'blueDark': #2262b9,
+  'blueLight': #56ccf2,
+  'green': #3cb848,
+  'greenDark': #219653,
+  'greenLight': #6fcf97,
+  'cream': #e1d9c0,
+  'yellow': #f2c94c,
+  'white': #f4f7f9,
+  'red': #f24545,
+  'brown': #ad7849,
+  'orange': #f2994a,
+  'pink': #ff649e,
+  'maroon': #a62f5a,
+  'purple': #9946db,
+  'transparent': #ffffff00,
+  'duckEgg': #89c1ab,
 );
